add_library(core_lib
    storage_strategy.hpp
    strategy_db_manager.hpp
    strategy_db_manager.cpp
    config.hpp
    config.cpp
    types.hpp
)

target_link_libraries(core_lib
    PUBLIC
        RocksDB::rocksdb
        fmt::fmt
        CLI11::CLI11
        nlohmann_json::nlohmann_json
    PRIVATE
        strategies_lib
        utils_lib
)